js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/message.js
assert
.
sameValue
(
SyntaxError
.
prototype
.
message
"
"
)
;
verifyProperty
(
SyntaxError
.
prototype
"
message
"
{
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
